network-cdk/cdk.out/TheOnlyStackInTheCdkApp.template.json
{
  "Resources": {
    "TheOnlyNetworkInThisCdkAppvpc1B686243": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1Subnet4F4E5928": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "AvailabilityZone": "eu-west-3a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "staging-publicSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1/Subnet"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1RouteTableC747AD3F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1/RouteTable"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1RouteTableAssociation5C941457": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1RouteTableC747AD3F"
        },
        "SubnetId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1Subnet4F4E5928"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1/RouteTableAssociation"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1DefaultRouteCF807989": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1RouteTableC747AD3F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcIGW23E65886"
        }
      },
      "DependsOn": [
        "TheOnlyNetworkInThisCdkAppvpcVPCGW9B458D6C"
      ],
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet1/DefaultRoute"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2Subnet30FDA70B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "AvailabilityZone": "eu-west-3b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "staging-publicSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2/Subnet"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2RouteTable0561445B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2/RouteTable"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2RouteTableAssociationEF52AA30": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2RouteTable0561445B"
        },
        "SubnetId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2Subnet30FDA70B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2/RouteTableAssociation"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2DefaultRouteD4410BF6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2RouteTable0561445B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcIGW23E65886"
        }
      },
      "DependsOn": [
        "TheOnlyNetworkInThisCdkAppvpcVPCGW9B458D6C"
      ],
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-publicSubnetSubnet2/DefaultRoute"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1SubnetE8388296": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "AvailabilityZone": "eu-west-3a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "staging-isolatedSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet1/Subnet"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1RouteTableCA84423C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet1/RouteTable"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1RouteTableAssociationB899C503": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1RouteTableCA84423C"
        },
        "SubnetId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1SubnetE8388296"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet1/RouteTableAssociation"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2SubnetD8B1F703": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "AvailabilityZone": "eu-west-3b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "staging-isolatedSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet2/Subnet"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2RouteTable61AA9A5C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet2/RouteTable"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2RouteTableAssociation57C9EEB1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2RouteTable61AA9A5C"
        },
        "SubnetId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2SubnetD8B1F703"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/staging-isolatedSubnetSubnet2/RouteTableAssociation"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcIGW23E65886": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          },
          {
            "Key": "Name",
            "Value": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/IGW"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcVPCGW9B458D6C": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "InternetGatewayId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcIGW23E65886"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpc/VPCGW"
      }
    },
    "TheOnlyNetworkInThisCdkAppcluster56255C7C": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "staging-ecsCluster",
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/cluster/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadbalancerSecurityGroup0CC3935E": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Public access to the load balancer.",
        "GroupName": "staging-loadbalancerSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          }
        ],
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadbalancerSecurityGroup/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppingressToLoadbalancer8F8BE4AF": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Fn::GetAtt": [
            "TheOnlyNetworkInThisCdkApploadbalancerSecurityGroup0CC3935E",
            "GroupId"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/ingressToLoadbalancer"
      }
    },
    "TheOnlyNetworkInThisCdkApploadbalancer87457FA1": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Name": "staging-loadbalancer",
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "TheOnlyNetworkInThisCdkApploadbalancerSecurityGroup0CC3935E",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1Subnet4F4E5928"
          },
          {
            "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2Subnet30FDA70B"
          }
        ],
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1DefaultRouteCF807989",
        "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2DefaultRouteD4410BF6"
      ],
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadbalancer/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadbalancerhttpListener784EE098": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TheOnlyNetworkInThisCdkAppdummyTargetGroup9BE58898"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "TheOnlyNetworkInThisCdkApploadbalancer87457FA1"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadbalancer/httpListener/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppdummyTargetGroup9BE58898": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": "staging-no-op-targetGroup",
        "Port": 8080,
        "Protocol": "HTTP",
        "Tags": [
          {
            "Key": "environment",
            "Value": "staging"
          }
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/dummyTargetGroup/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppvpcIdFB8341BB": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpc1B686243"
        },
        "Name": "staging-Network-vpcId",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/vpcId/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApphttpListener8ED0F133": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkApploadbalancerhttpListener784EE098"
        },
        "Name": "staging-Network-httpListenerArn",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/httpListener/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApphttpsListener98EF2534": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": "null",
        "Name": "staging-Network-httpsListenerArn",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/httpsListener/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadBalancerSecurityGroupId14881F70": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "TheOnlyNetworkInThisCdkApploadbalancerSecurityGroup0CC3935E",
            "GroupId"
          ]
        },
        "Name": "staging-Network-loadBalancerSecurityGroupId",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadBalancerSecurityGroupId/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppecsClusterNameE698D3A7": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppcluster56255C7C"
        },
        "Name": "staging-Network-ecsClusterName",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/ecsClusterName/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppavailabilityZoneOne3FEEF6CE": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": "eu-west-3a",
        "Name": "staging-Network-availabilityZoneOne",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/availabilityZoneOne/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppavailabilityZoneTwo50744B18": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": "eu-west-3b",
        "Name": "staging-Network-availabilityZoneTwo",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/availabilityZoneTwo/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppisolatedSubnetOne0D4910FF": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet1SubnetE8388296"
        },
        "Name": "staging-Network-isolatedSubnetIdOne",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/isolatedSubnetOne/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkAppisolatedSubnetTwo5D49140A": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingisolatedSubnetSubnet2SubnetD8B1F703"
        },
        "Name": "staging-Network-isolatedSubnetIdTwo",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/isolatedSubnetTwo/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApppublicSubnetOne6575975E": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet1Subnet4F4E5928"
        },
        "Name": "staging-Network-publicSubnetIdOne",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/publicSubnetOne/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApppublicSubnetTwoFA277EEB": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkAppvpcstagingpublicSubnetSubnet2Subnet30FDA70B"
        },
        "Name": "staging-Network-publicSubnetIdTwo",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/publicSubnetTwo/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadBalancerArnCD26ED54": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Ref": "TheOnlyNetworkInThisCdkApploadbalancer87457FA1"
        },
        "Name": "staging-Network-loadBalancerArn",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadBalancerArn/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadBalancerDnsNameB2B28FCB": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "TheOnlyNetworkInThisCdkApploadbalancer87457FA1",
            "DNSName"
          ]
        },
        "Name": "staging-Network-loadBalancerDnsName",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadBalancerDnsName/Resource"
      }
    },
    "TheOnlyNetworkInThisCdkApploadBalancerCanonicalHostedZoneId107BFAFC": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": {
          "Fn::GetAtt": [
            "TheOnlyNetworkInThisCdkApploadbalancer87457FA1",
            "CanonicalHostedZoneID"
          ]
        },
        "Name": "staging-Network-loadBalancerCanonicalHostedZoneId",
        "Tags": {
          "environment": "staging"
        }
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/TheOnlyNetworkInThisCdkApp/loadBalancerCanonicalHostedZoneId/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAA31RwW7CMAz9Fu4hkGnSrmM9IKYdKkDcXeOxQJtUsQNCVf99KRTaXXbK83vPfrZidGPMm55P3uHCU9yfZugD6WYjgCeVeccSIopaE/sYkFT27R64Vca8jlu7tyF80c2uxs65yzOVx6K0uImFI+m4Aa19FNpCUdLAD9yC2aMFsd49zSoP9gxCw4yVEwoJLxN7gWsf2lcLSVf8VOREbQhjsHJdBh/rW9y/xModAjG3ipB1k5WRU0zn6mESSmCxWHrYF1CCQ+sO53T5oq7Tube1v5L2cdPuvX/qsc+mka73PPBI30I4pAsfi47KVjFX3WeFlJ5DgIr6PZ9F27bqE84wM0bPtZlPjmztNEQntiK9vr+/i1fKkwYCAAA="
      },
      "Metadata": {
        "aws:cdk:path": "TheOnlyStackInTheCdkApp/CDKMetadata/Default"
      }
    }
  }
}
